8196884: VS2017 Multiple Type Cast Conversion Compilation Errors

Change the type of symbolic constant badAddressVal and introduce specific casts to fix multiple type cast conversion compilation errors.

Reviewed-by: coleenp, kbarrett